update redis volume

--- a/pod-storage-redis.yaml
+++ b/pod-storage-redis.yaml
@@ -8,7 +8,7 @@ spec:
     image: redis
     volumeMounts:
     - name: redis-storage
-      mountPath: /data/redis
+      mountPath: /data/
   volumes:
   - name: redis-storage
     emptyDir: {}
